--- a/src/Shoptimizer/package.json
+++ b/src/Shoptimizer/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
@@ -32,6 +33,7 @@
     "@types/react": "^18.2.20",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
+    "patch-package": "^8.0.0",
     "typescript": "^5.1.6"
   },
   "private": true
