--- a/src/Shoptimizer/package.json
+++ b/src/Shoptimizer/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.3",
     "expo": "~49.0.7",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
@@ -34,6 +35,7 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "patch-package": "^8.0.0",
+    "react-native-tooltip": "^5.2.0",
     "typescript": "^5.1.6"
   },
   "private": true
