some build stuff

--- a/src/Shoptimizer/app.json
+++ b/src/Shoptimizer/app.json
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.nikodem101.Shoptimizer"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "ac0da0ee-daa2-4d86-b986-836edd6e6da6"
+      }
     }
   }
 }
