--- a/src/Shoptimizer/package.json
+++ b/src/Shoptimizer/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@openspacelabs/react-native-zoomable-view": "^2.1.5",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "axios": "^1.6.3",
     "expo": "~49.0.7",
+    "expo-dev-client": "~2.4.12",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -25,9 +28,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-vector-icons": "^10.0.2",
-    "react-native-web": "~0.19.6",
-    "expo-splash-screen": "~0.20.5",
-    "expo-dev-client": "~2.4.12"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
